# gorpho

./: CMakeLists.txt  README.md
lib/: cusatarit.cuh  flat_linear_morph.cuh  flat_morph.cuh  general_morph.cuh  helper_math.cuh  misc.cuh  morph.cuh  strel.cuh  util.cuh  view.cuh  volume.cuh  zono_ball_coef_best.inl  zono_ball_coef_inside.inl  zono_ball_coef_outside.inl  zono_ball_coefs.inl
lib/cudablockproc/: blockindexiter.cuh  blockindexiter.inl  cudablockproc.cuh  cudablockproc.inl  helper_math.cuh
test/: CMakeLists.txt  CMakeLists.txt.in  flat_linear_morph_tests.cu  flat_morph_tests.cu  general_morph_tests.cu  misc_tests.cu  strel_tests.cu  test_util.cuh  util_tests.cu  view_tests.cu  volume_tests.cu
